--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -1,8 +1,48 @@
 @import '~antd/lib/style/themes/default.less';
 
-//.pre {
-//  margin: 12px 0;
-//  padding: 12px 20px;
-//  background: @input-bg;
-//  box-shadow: @card-shadow;
-//}
+.text1 {
+  width: 100%;
+  //overflow: hidden;
+  //text-overflow: ellipsis;
+  //white-space: nowrap;
+}
+.colbox{
+  margin-bottom: 20px;
+}
+.cardBox {
+  height: 100%;
+  text-align: center;
+}
+
+.cardimg {
+  width: 30%;
+  margin-bottom: 20px;
+  margin-right: 5px;
+}
+
+.cardtext {
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+
+
+.events {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.events .ant-badge-status {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+  text-overflow: ellipsis;
+  font-size: 12px;
+}
+.notes-month {
+  text-align: center;
+  font-size: 28px;
+}
+.notes-month section {
+  font-size: 28px;
+}
